[package]
name = "license-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
dusk-plonk = { workspace = true, features = ["rkyv-impl", "alloc"] }
zk-citadel = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["std_rng"] }
rusk-profile = { workspace = true }
execution-core = { workspace = true }
ff = { workspace = true }
dusk-poseidon = { workspace = true }
