[package]
name = "transfer-circuits"
version = "0.5.0"
edition = "2021"

[dependencies]
rand_core = "0.6"

dusk-bytes = "0.1"
dusk-bls12_381 = "0.11"
dusk-jubjub = "0.12"
dusk-plonk = "0.13"
dusk-poseidon = "0.29.1-rc.0"
dusk-merkle = { version = "0.4.1-rc.0", features = ["poseidon", "zk"] }
dusk-pki ="0.11"
dusk-schnorr = "0.12"
phoenix-core = { version = "0.18", features = ["alloc"] }

code-hasher = { version = "0.4", path = "../../macros/code-hasher" }
rusk-profile = { version = "0.6", path = "../../rusk-profile", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
builder = ["rusk-profile"]

[[test]]
name = "test-execute"
path = "tests/execute.rs"
required-features = ["builder"]

[[test]]
name = "test-stct"
path = "tests/send_to_contract_transparent.rs"
required-features = ["rusk-profile"]

[[test]]
name = "test-stco"
path = "tests/send_to_contract_obfuscated.rs"
required-features = ["rusk-profile"]

[[test]]
name = "test-wft"
path = "tests/withdraw_from_transparent.rs"
required-features = ["rusk-profile"]

[[test]]
name = "test-wfo"
path = "tests/withdraw_from_obfuscated.rs"
required-features = ["rusk-profile"]
