[package]
name = "transfer-circuits"
version = "0.5.0"
edition = "2021"

[dependencies]
rand_core = "0.6"

dusk-bytes = "0.1"
dusk-bls12_381 = "0.12"
dusk-jubjub = "0.13"
dusk-plonk = "0.16"
dusk-poseidon = "0.31"
poseidon-merkle = { version = "0.3", features = ["zk"] }
dusk-merkle = { version = "0.5", features = ["size_32"] }
dusk-pki ="0.13"
dusk-schnorr = "0.14"
phoenix-core = { version = "0.21", default-features = false, features = ["rkyv-impl", "alloc"] }

rusk-profile = { version = "0.6", path = "../../rusk-profile", optional = true }
storage = { version = "0.1", path = "../storage", optional = true }

[dev-dependencies]
rand = "0.8"
ff = { version = "0.13", default-features = false }

[features]
store = ["rusk-profile", "storage"]

[[bin]]
name = "transfer-circuits-store"
path = "src/bin/store.rs"
required-features = ["store"]

[[test]]
name = "test-execute"
path = "tests/execute.rs"
required-features = ["rusk-profile"]

[[test]]
name = "test-stct"
path = "tests/send_to_contract_transparent.rs"
required-features = ["rusk-profile"]

[[test]]
name = "test-wft"
path = "tests/withdraw_from_transparent.rs"
required-features = ["rusk-profile"]
