[package]
name = "transfer-circuits"
version = "0.5.0"
edition = "2021"

[dependencies]
rand_core = "0.6"

dusk-bytes = "0.1"
dusk-bls12_381 = "0.13"
dusk-jubjub = "0.14"
dusk-plonk = "0.19"
dusk-poseidon = "0.33"
poseidon-merkle = { version = "0.5", features = ["zk"] }
dusk-merkle = { version = "0.5", features = ["size_32"] }
jubjub-schnorr = { version = "0.2", features = ["double"] }
phoenix-core = { version = "0.26", default-features = false, features = ["rkyv-impl", "alloc"] }


[dev-dependencies]
rand = "0.8"
ff = { version = "0.13", default-features = false }
rusk-profile = { version = "0.6", path = "../../rusk-profile" }
