[package]
name = "alice"
version = "0.3.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phoenix-core = { version = "0.26", default-features = false, features = ["rkyv-impl", "alloc"] }
rusk-abi = { version = "0.13.0-rc", path = "../../rusk-abi", features = ["dlmalloc"] }
