[package]
name = "bid-contract"
version = "0.1.0"
authors = ["CPerezz <c.perezbaro@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = {version="0.5", default-features=false}
canonical_derive = "0.5"
dusk-abi = {git="https://github.com/dusk-network/rusk-vm", tag="v0.4.0"}
dusk-bytes = "0.1"
dusk-bls12_381 = {version="0.6", features=["canon"], default-features=false}
dusk-jubjub = {version="0.8", features=["canon"], default-features=false}
dusk-poseidon = {version="0.18", features=["canon"], default-features=false}
dusk-pki = {version = "0.6", features = ["canon"]}
phoenix-core = {git="https://github.com/dusk-network/phoenix-core", tag="v0.9.1", features = ["canon"]}
dusk-kelvin-map = "0.3"
nstack = "0.7"
microkelvin = "0.6"
schnorr = {git="https://github.com/dusk-network/schnorr", tag="v0.5.1", default-features = false, features = ["canon"]}
dusk-blindbid = {version = "0.7", default-features = false, features = ["canon"]}

# Test dependencies
rand = {version="0.7", optional=true}
rusk-vm = {git="https://github.com/dusk-network/rusk-vm", tag="v0.3.0", optional=true}
canonical_host = {version="0.5", optional=true}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
host=["rand", "rusk-vm", "canonical_host"]
