[package]
name = "bid-contract"
version = "0.1.0"
authors = ["CPerezz <carlos@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dusk-abi = "0.9"
canonical = { version="0.6", default-features = false }
canonical_derive = "0.6"
rusk-abi = {path = "../../rusk-abi"}
dusk-bytes = "0.1"
dusk-bls12_381 = { version="0.8", features=["canon"], default-features = false }
dusk-jubjub = { version="0.10", features=["canon"], default-features = false }
dusk-poseidon = { version="0.22.0-rc", features=["canon"], default-features = false }
dusk-pki = { version = "0.8.0-rc", features = ["canon"] }
phoenix-core = { version = "0.13.0-rc", features = ["canon"] }
dusk-hamt = "0.5.0-rc"
nstack = "0.10.0-rc"
microkelvin = "0.10.0-rc"
dusk-schnorr = { version = "0.8.0-rc", default-features = false, features = ["canon"] }
dusk-blindbid = { version = "0.10.0-rc", default-features = false, features = ["canon"] }
transfer-contract = { path = "../../contracts/transfer", features = ["no-bridge"] }

[dev-dependencies]
transfer-wrapper = { path = "../../test-utils/transfer-wrapper" }
dusk-plonk = "0.8"
bid-circuits = { path = "../../circuits/bid" }
transfer-circuits = { path = "../../circuits/transfer" }
lazy_static = "1.4"
rand = "0.8"
rusk-profile = { path = "../../rusk-profile" }
rusk-vm = "0.7.0-rc"
