[package]
name = "bob"
version = "0.3.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rusk-abi = { version = "0.13.0-rc", path = "../../rusk-abi", features = ["debug"] }
execution-core = { version = "0.1.0", path = "../../execution-core" }
rkyv = { version = "0.7", default-features = false, features = ["size_32"] }
bytecheck = { version = "0.6", default-features = false }
dusk-bytes = "0.1"
