[package]
name = "bob"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
execution-core = { workspace = true }
rusk-abi = { workspace = true, features = ["abi", "dlmalloc"] }
rkyv = { workspace = true, features = ["size_32"] }
bytecheck = { workspace = true }
dusk-bytes = { workspace = true }
